--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/systemWhiteColor"
     tools:context=".CreationActivity"
     tools:layout_editor_absoluteY="25dp">
 
@@ -11,8 +12,7 @@
         android:id="@+id/toolbar"
 
         android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="14dp"
+        android:layout_height="40dp"
         android:background="@color/accentColor"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +29,8 @@
                 android:layout_width="43dp"
                 android:layout_height="match_parent"
                 android:background="@null"
-                android:src="@drawable/backicon"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:src="@drawable/backicon" />
 
             <TextView
                 android:id="@+id/toolbar_title"
@@ -46,21 +46,20 @@
                 android:layout_width="43dp"
                 android:layout_height="match_parent"
                 android:background="@null"
-                android:src="@drawable/addtodoicon"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:src="@drawable/done" />
 
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="385dp"
+        android:layout_height="29dp"
+        android:background="@color/backgroundColor"
+        android:paddingLeft="10dp"
         android:text="Категория"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/categoryList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,13 +67,13 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="386dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="7dp"
+        android:background="@color/backgroundColor"
+        android:paddingLeft="10dp"
         android:text="Задача"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/editText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,15 +81,15 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginStart="33dp"
+        android:layout_width="362dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/edit_text_borders"
         android:ems="10"
         android:inputType="textPersonName"
+        android:padding="8dp"
         android:text="Название задачи..."
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,15 +97,14 @@
 
     <ListView
         android:id="@+id/categoryList"
-        android:choiceMode="singleChoice"
-        android:listSelector="#666666"
-        android:layout_width="0dp"
+        android:layout_width="382dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:choiceMode="singleChoice"
+        android:drawSelectorOnTop="true"
+        android:listSelector="@drawable/check_state"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        />
 </android.support.constraint.ConstraintLayout>
