--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -10,11 +10,15 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:padding="8dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:textSize="10dp"
         android:text=""
         android:textAllCaps="true"
         android:background="#EEE"
         android:textColor="#000"
         android:textStyle="normal"
-        android:visibility="visible" />
+        android:visibility="visible"
+        />
 </LinearLayout>
